# bwmenu

./: default.nix  flake.nix  pyproject.toml  readme.md  setup.py  shell.nix  todo.txt
.vim/: coc-settings.json
bwmenu/: __init__.py  __main__.py  bin.py  bitwarden.py  gpg.py  input.py  item.py  keyboard.py  rofi.py  utils.py
src/bwmenu/: __main__.py  bitwarden.py  cachedstr.py  client.py  gpg.py  input.py  item.py  rofi.py
