[tool.poetry]
name = "bwmenu"
version = "0.2.0"
description = "bitwarden rofi menu and qutebrowser userscript"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
tldextract = "^3.4.4"
docopt = "^0.6.2"
pydantic = "^1.10.9"

[tool.poetry.scripts]
bwmenu= 'bwmenu.__main__:main'

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
